[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://theme/nebula.tex" type="Texture" id=2]
[ext_resource path="res://fonts/just_in_the_firestorm.fnt" type="BitmapFont" id=3]

[node name="main_menu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/scale = Vector2( 1, 0.938081 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="plasma_simulator" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 380.0
margin/top = 60.0
margin/right = 559.0
margin/bottom = 76.0
custom_fonts/font = ExtResource( 3 )
text = "Plasma Simulator"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="run" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 225.0
margin/top = 275.0
margin/right = 273.0
margin/bottom = 299.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.96875, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.125, 0, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Run"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="options" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 375.0
margin/top = 275.0
margin/right = 463.0
margin/bottom = 299.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.96875, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.125, 0, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="credits" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 525.0
margin/top = 275.0
margin/right = 613.0
margin/bottom = 299.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.96875, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.125, 0, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Credits"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="quit" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 675.0
margin/top = 275.0
margin/right = 727.0
margin/bottom = 299.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.96875, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.125, 0, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="manu_mitra" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 540.0
margin/right = 236.0
margin/bottom = 554.0
text = "Plasma Simulator by Manu Mitra"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="version" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 780.0
margin/top = 515.0
margin/right = 840.0
margin/bottom = 529.0
text = "Version 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="last_updated" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 780.0
margin/top = 540.0
margin/right = 970.0
margin/bottom = 554.0
text = "Last Updated on July 07, 2018"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="run" to="." method="_on_run_pressed"]

[connection signal="pressed" from="options" to="." method="_on_options_pressed"]

[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]


